conceitoB/tests/shouldFail/test5.amen
baptize int as sufixo giveth ", amen!";
baptize string as prefixo giveth "There shall be no DP";
baptize string as frase giveth prefixo.sufixo;
baptize int as i;
i giveth 0;
prayAsLongAs((i != 10)) {
    proclaim(i.": ".frase);
    i giveth i + 1;
};
